tests/ui/parallel-rustc/cycle_crash-issue-135870.stderr
error[E0391]: cycle detected when checking if `FOO` is a trivial const
  --> $DIR/cycle_crash-issue-135870.rs:6:1
   |
LL | const FOO: usize = FOO;
   | ^^^^^^^^^^^^^^^^
   |
   - which requires building MIR for `FOO`...
  --> $DIR/cycle_crash-issue-135870.rs:6:1
   |
LL | const FOO: usize = FOO;
   | ^^^^^^^^^^^^^^^^
   - which again requires checking if `FOO` is a trivial const, completing the cycle
note: cycle used when simplifying constant for the type system `FOO`
  --> $DIR/cycle_crash-issue-135870.rs:6:1
   |
LL | const FOO: usize = FOO;
   | ^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
